name:                rx-core
version:             0.0.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Roman Gonzalez
maintainer:          romanandreg@gmail.com
-- copyright:
category:            Concurrency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

benchmark rx-core-bench
  type: exitcode-stdio-1.0
  main-is: RxBenchmark.hs
  build-depends:
    base >=4.7 && <4.9,
    base-compat,
    async,
    criterion,
    rx-core

  hs-source-dirs:      bench
  default-language:    Haskell2010

test-suite rx-core-testsuite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base >=4.7 && <4.9,
    async,
    base-compat,
    hspec,
    HUnit,
    QuickCheck,
    stm,
    tiempo,
    rx-core,
    rx-scheduler,
    rx-disposable

  hs-source-dirs:      test
  ghc-options:         -Wall -rtsopts -eventlog -threaded
  default-language:    Haskell2010


library
  exposed-modules:
    Rx.Observable,
    Rx.Subject
  other-modules:
    Rx.Notification,
    Rx.Observable.Types,
    Rx.Observable.Distinct,
    Rx.Observable.Do,
    Rx.Observable.Either,
    Rx.Observable.Error,
    Rx.Observable.Filter,
    Rx.Observable.First,
    Rx.Observable.Fold,
    Rx.Observable.Interval,
    Rx.Observable.List,
    Rx.Observable.Map,
    Rx.Observable.Maybe,
    Rx.Observable.Merge,
    Rx.Observable.Repeat,
    Rx.Observable.Scan,
    Rx.Observable.Scheduler,
    Rx.Observable.Take,
    Rx.Observable.Throttle,
    Rx.Observable.Timeout,
    Rx.Observable.Zip,
    Rx.Subject.SingleSubject,
    Rx.Subject.PublishSubject,
    Rx.Subject.SyncPublishSubject

  build-depends:
    base >=4.7 && <4.9,
    async,
    base-compat,
    containers,
    unordered-containers,
    mtl,
    stm,
    stm-chans,
    time,
    tiempo,

    rx-disposable,
    rx-scheduler

  ghc-options:         -Wall -funbox-strict-fields
  hs-source-dirs:      src
  default-language:    Haskell2010